--- a/public/plugin.html
+++ b/public/plugin.html
@@ -124,6 +124,8 @@
       $(function(){
         var app = new NodeNodes.App();
         app.start();
+
+        window.app = app;
       })
     </script>
 
