--- a/public/plugin.html
+++ b/public/plugin.html
@@ -64,53 +64,14 @@
           </div>
 
           <div class="form-actions">
-              <button type="submit" class="btn btn-inverse"><i class="icon-plus icon-white"></i>Add Note</button>
-              <button type="reset" class="btn btn-small ">Cancel</button>
+              <button type="submit" class="btn btn-primary"><i class="icon-plus icon-white"></i>Add Note</button>
+              <button type="reset" class="btn btn-small btn-inverse">Cancel</button>
             </div>
         </form>
       </div>
 
       <div class="row-fluid">
-        <ul id="notes" class="offset1 span10 well">
-          <li class="note closed">
-            <form>
-              <button class="btn btn-inverse btn-mini">
-                <b class="icon-white icon-check"></b>
-              </button>
-            </form>
-            <div class="body">
-              10/24 - 10/25 ~ Matt Higgins
-            </div>
-          </li>
-          <li class="note">
-            <form>
-              <button class="btn btn-primary btn-mini">
-                <b class="icon-white icon-ok"></b>
-              </button>
-            </form>
-            <div class="body">
-              2012-11-11 ~ Dan Lash
-            </div>
-          </li>
-          <li class="note">
-            <form>
-              <button class="btn btn-primary btn-mini">
-                <b class="icon-white icon-ok"></b>
-              </button>
-            </form>
-            Maecenas eu mi eu nisi accumsan sagittis a in augue. Duis ut orci erat, auctor rhoncus turpis. Aliquam tortor libero, eleifend eu molestie et, porttitor eu ligula. Curabitur blandit rutrum risus, quis pretium libero posuere sed. Integer adipiscing dignissim eros, id tristique leo sollicitudin auctor. Praesent in ipsum diam, sit amet iaculis lectus. Ut in diam mi. Pellentesque imperdiet suscipit odio et ultrices. Aenean blandit tellus vel orci semper euismod adipiscing augue hendrerit.
-          </li>
-          <li class="note">
-            <form>
-              <button class="btn btn-primary btn-mini">
-                <b class="icon-white icon-ok"></b>
-              </button>
-            </form>
-            <div class="body">
-              2012-11-11 ~ Dan Lash
-            </div>
-          </li>
-        </ul>
+        <ul id="notes" class="offset1 span10 well"></ul>
       </div>
 
     </div> 
