add note and cancel

--- a/public/plugin.html
+++ b/public/plugin.html
@@ -51,21 +51,21 @@
       </div>
     </div>
 
-    <div class="container">
+    <div id="list" class="container adding">
 
       <div class="row-fluid">
-        <h1 class="offset1">Vacation Days</h1>
+        <h1 id="name" class="offset1"></h1>
       </div>
 
       <div class="row-fluid">
-        <form id="add-form" class="offset1 span10 form-horizontal well">
+        <form id="new-note" class="offset1 span10 form-horizontal well">
           <div class="control-group">
             <input type="text" class="input-xlarge span5" id="note-body">
           </div>
 
           <div class="form-actions">
-              <button type="submit" class="btn btn-primary"><i class="icon-plus icon-white"></i>Add Note</button>
-              <button type="reset" class="btn btn-small btn-inverse">Cancel</button>
+              <button type="submit" class="add btn btn-primary"><i class="icon-plus icon-white"></i>Add Note</button>
+              <button type="reset" class="cancel btn btn-small btn-inverse">Cancel</button>
             </div>
         </form>
       </div>
