--- a/public/plugin.html
+++ b/public/plugin.html
@@ -23,14 +23,14 @@
     <link rel="shortcut icon" href="images/favicon.ico">
   </head>
 
-  <body id="node_notes">
+  <body id="node-notes">
 
     <div class="navbar navbar navbar-fixed-top">
       <div class="navbar-inner">
 
     
           <a class="offset1 brand" href="#">Node Notes</a>
-          <div class="nav-collapse collapse">
+          <div id="navigation" class="nav-collapse collapse">
             <div id="add" class="dropdown">
               <a href="#" class="btn btn-info">Add</a><a href="#" class="btn btn-info dropdown-toggle" data-toggle="dropdown" >
                 <b class="caret"></b>
@@ -42,7 +42,7 @@
                 <li><a href="#">Team Outing Ideas</a></li>
               </ul>
             </div>
-            <a href="#" class="btn btn-info " data-toggle="button">
+            <a href="#" id="show-closed" class="btn btn-info" >
               <b class="icon-white icon-check"></b>
               Show Closed
             </a>
