add navigation toggles adding mode

--- a/public/plugin.html
+++ b/public/plugin.html
@@ -31,8 +31,8 @@
     
           <a class="offset1 brand" href="#">Node Notes</a>
           <div id="navigation" class="nav-collapse collapse">
-            <div id="add" class="dropdown">
-              <a href="#" class="btn btn-info">Add</a><a href="#" class="btn btn-info dropdown-toggle" data-toggle="dropdown" >
+            <div class="dropdown">
+              <a id="add" href="#" class="btn btn-info">Add</a><a href="#" class="btn btn-info dropdown-toggle" data-toggle="dropdown" >
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div id="list" class="container adding">
+    <div id="list" class="container">
 
       <div class="row-fluid">
         <h1 id="name" class="offset1"></h1>
