navigation between lists

--- a/public/plugin.html
+++ b/public/plugin.html
@@ -35,12 +35,7 @@
               <a id="add" href="#" class="btn btn-info">Add</a><a href="#" class="btn btn-info dropdown-toggle" data-toggle="dropdown" >
                 <b class="caret"></b>
               </a>
-              <ul class="dropdown-menu">
-                <li><a href="#">New Category</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Retrospective Topics</a></li>
-                <li><a href="#">Team Outing Ideas</a></li>
-              </ul>
+              <ul class="dropdown-menu"></ul>
             </div>
             <a href="#" id="show-closed" class="btn btn-info" >
               <b class="icon-white icon-check"></b>
