add list through modal; now with fake save!

--- a/public/plugin.html
+++ b/public/plugin.html
@@ -36,6 +36,15 @@
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu"></ul>
+              <div id="new-list" class="modal hide fade">
+                <div class="modal-body">
+                  <form>
+                    <input id="list-name" type="text" name="name" class="input-xlarge span8" placeholder="Brilliant Ideas">
+                  </form>
+                  <a href="#" class="cancel btn">Cancel</a>
+                  <a href="#" class="add btn btn-primary btn-large"><b class="icon-white icon-list"></b>Add List</a>
+                </div>
+              </div>
             </div>
             <a href="#" id="show-closed" class="btn btn-info" >
               <b class="icon-white icon-check"></b>
