even small sex sells

--- a/public/plugin.html
+++ b/public/plugin.html
@@ -64,7 +64,7 @@
       <div class="row-fluid">
         <form id="new-note" class="offset1 span10 form-horizontal well">
           <div class="control-group">
-            <input type="text" class="input-xlarge span5" id="note-body">
+            <input type="text" class="input-xlarge span5" id="note-body" placeholder="Learn something new">
           </div>
 
           <div class="form-actions">
